一旦犬画像に合わせる

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bulma": "^1.0.4",
     "d3": "^7.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
