--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bulma": "^1.0.4",
     "d3": "^7.9.0",
+    "d3-scale": "^4.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
